docs: mmfi data visualizatiom

--- a/configs/mmfi_e01.yaml
+++ b/configs/mmfi_e01.yaml
@@ -14,7 +14,8 @@ mmfi:
   manual_split:
     train_dataset:
       subjects: [S01, S02, S03, S04, S05, S06, S07, S08, S09, S10]
-      actions:  [A01, A02, A03, A04, A05, A06, A07, A08, A09, A10, A11, A12, A13, A14, A15, A16, A17, A18, A19, A20, A21, A22, A23, A24, A25, A26, A27]
+      actions:  [A02, A03, A04, A05, A13, A14, A17, A18, A19, A20, A21, A22, A23, A27]
+
     val_dataset:
       subjects: []             # empty is allowed; decode_config handles it
       actions:  [A01, A02, A03, A04, A05, A06, A07, A08, A09, A10, A11, A12, A13, A14, A15, A16, A17, A18, A19, A20, A21, A22, A23, A24, A25, A26, A27]
